packages/scaml.1.2.0~pre7/tests/fail/op_steps_to_quota.ml
[@@@SCaml iml_optimization=false]
open SCaml
let main x y =
  [],
  assert ( Global.get_steps_to_quota () > Nat 0 )

